[package]
name = "datrie"
version = "1.0.0"
edition = "2021"
license = "LGPL-2.1-or-later"
repository = "https://github.com/whs/libdatrie-rs"

[features]
default = ["cffi"]
cffi = ["std", "dep:libc", "dep:null-terminated", "dep:cstream"]
std = ["byteorder/std", "arrayvec/std"]
ctest = ["dep:cc", "cffi"]
bin = ["std", "dep:clap", "clap/derive", "dep:regex", "dep:iconv"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "trietool"
required-features = ["bin", "cffi"]

[dependencies]
libc = { version = "0.2", optional = true }
null-terminated = { version = "0.3.17", optional = true }
byteorder = { version = "1", default-features = false }
cstream = { version = "0.1.4", optional = true }
rangemap = "1.5.1"
arrayvec = { version = "0.7.6", default-features = false }
clap = { version = "4.5.20", optional = true }
regex = { version = "1.11.1", optional = true }
iconv = { version = "0.1.1", optional = true }

[dev-dependencies]
serial_test = "3.1.1"

[build-dependencies]
cbindgen = "0.27.0"
cc = { version = "1.1.31", optional = true }

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"
