[package]
name = "datrie-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version="1", features = ["derive"] }

[dependencies.datrie]
path = ".."

[[bin]]
name = "fuzz_load"
path = "fuzz_targets/fuzz_load.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_trie"
path = "fuzz_targets/fuzz_trie.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_trie_serde"
path = "fuzz_targets/fuzz_trie_serde.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_trie_command"
path = "fuzz_targets/fuzz_trie_command.rs"
test = false
doc = false
bench = false
